Fix for quick view overview not showing thumbails Forced main class to inherit height

--- a/src/renderer/resources/style/global.scss
+++ b/src/renderer/resources/style/global.scss
@@ -45,6 +45,7 @@ body {
 main {
   grid-area: main;
   overflow: hidden; //temp fix for double scrollbar
+  height: inherit;
 }
 
 #layoutContainer {
